Develop: making app navbar and structuring base modules. BC

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"baseUrl": "./",
 		"paths": {
 			"@app/*": ["src/app/*"],
+			"@shared/*": ["src/app/shared/*"],
 			"@environment/*": ["src/environments/*"]
 		},
 		"outDir": "./dist/out-tsc",
