--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,11 @@
 							"src/assets",
 							"src/manifest.webmanifest"
 						],
-						"styles": ["src/styles.scss"],
+						"styles": [
+							"node_modules/primeng/resources/themes/tailwind-light/theme.css",
+							"node_modules/primeng/resources/primeng.min.css",
+							"src/styles.scss"
+						],
 						"scripts": [],
 						"serviceWorker": true,
 						"ngswConfigPath": "ngsw-config.json"
