--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@angular/router": "~13.1.0",
 		"@angular/service-worker": "~13.1.0",
 		"jose": "^4.8.0",
+		"primeng": "^13.3.3",
 		"rxjs": "~7.4.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.11.4"
