--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
 						"styles": [
 							"node_modules/primeng/resources/themes/tailwind-light/theme.css",
 							"node_modules/primeng/resources/primeng.min.css",
+							"node_modules/ngx-toastr/toastr.css",
 							"src/styles.scss"
 						],
 						"scripts": [],
